--- a/cv/index.html
+++ b/cv/index.html
@@ -1213,7 +1213,8 @@
                 <a class="fs-2x social-link link-github icon-github" href="https://github.com/trachanh1609" target="_blank" data-toggle="tooltip" title="Vu Nguyen on Github"></a>
                 <a class="fs-2x social-link link-linkedin icon-linkedin" href="https://www.linkedin.com/in/anhvun/"
                   target="_blank" data-toggle="tooltip" title="Vu Nguyen on LinkedIn"></a>
-                <a class="fs-2x social-link icon-graduation-cap" href="https://trachanh1609.github.io/en/portfolio" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen Porfolio"></a>
+                <a class="fs-2x social-link icon-book" href="https://trachanh1609.github.io/en/portfolio" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen Porfolio"></a>
+                <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/en/cv/resume.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
               </div>
           </div>
         </div>
@@ -1242,10 +1243,16 @@
                 <ul class="list-unstyled clear-margin">
                   <li class="card card-nested clearfix">
                     <div class="content">
-                      <p class="clear-margin relative"><i class="icon-circle current-event" rel="tooltip" title="Currently Working" data-placement="left"></i><strong>Frontend Developer</strong>,&nbsp;<a href="https://meetingpackage.com" target="_blank">Meetingpackage</a></p>
+                      <p class="clear-margin relative"><i class="icon-circle current-event" rel="tooltip" title="Currently Working" data-placement="left"></i><strong>Frontend Developer</strong>,&nbsp;<a href="https://meetingpackage.com" target="_blank">Meetingpackage.com</a></p>
                       <p class="text-muted"><small><span class="space-right">Aug, 2017 - Present</span></small></p>
                       <div class="mop-wrapper space-bottom"></div>
                       <ul>
+                        <li class="mop-wrapper">
+                          <p>Creating REST API endpoints and developing new features</p>
+                        </li>
+                        <li class="mop-wrapper">
+                          <p>Bug fixing and UI improvements</p>
+                        </li>
                         <li class="mop-wrapper">
                           <p>UX/UI design for the venue page</p>
                         </li>
@@ -1263,7 +1270,7 @@
                   </li>
                   <li class="card card-nested clearfix">
                     <div class="content">
-                      <p class="clear-margin relative"><strong>Frontend Developer</strong>,&nbsp;<a href="http://www.autonappi.fi" target="_blank">Autonappi</a></p>
+                      <p class="clear-margin relative"><strong>Frontend Developer</strong>,&nbsp;<a href="http://www.autonappi.fi" target="_blank">Autonappi.fi</a></p>
                       <p class="text-muted"><small><span class="space-right">Feb, 2017 - May, 2017</span><span><i class="icon-clock mr-5"></i>3 months</span></small></p>
                       <div class="mop-wrapper space-bottom"></div>
                       <ul>
@@ -1425,11 +1432,11 @@
                   <ul class="list-unstyled clear-margin">
                     <li class="card card-nested">
                       <p><strong>Things to Learn</strong></p>
-                      <div class="space-top labels"><span class="label label-keyword">IoT</span><span class="label label-keyword">Mobile App Development</span><span class="label label-keyword">UI/UX basic</span></div>
+                      <div class="space-top labels"><span class="label label-keyword">More Frontend</span><span class="label label-keyword">Backend Technology</span><span class="label label-keyword">IoT</span><span class="label label-keyword">Mobile App Development</span><span class="label label-keyword">UI/UX basic</span></div>
                     </li>
                     <li class="card card-nested">
                       <p><strong>Hobbies</strong></p>
-                      <div class="space-top labels"><span class="label label-keyword">Guitar</span><span class="label label-keyword">Harmonica</span><span class="label label-keyword">Football</span><span class="label label-keyword">Billiards</span></div>
+                      <div class="space-top labels"><span class="label label-keyword">Guitar</span><span class="label label-keyword">Foosball</span><span class="label label-keyword">Football</span><span class="label label-keyword">Billiards</span></div>
                     </li>
                   </ul>
                 </div>
