fix resume pdf link

--- a/cv/index.html
+++ b/cv/index.html
@@ -1214,7 +1214,7 @@
                 <a class="fs-2x social-link link-linkedin icon-linkedin" href="https://www.linkedin.com/in/anhvun/"
                   target="_blank" data-toggle="tooltip" title="Vu Nguyen on LinkedIn"></a>
                 <a class="fs-2x social-link icon-book" href="https://trachanh1609.github.io/en/portfolio" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen Porfolio"></a>
-                <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/en/cv/resume.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
+                <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/en/cv/VuNguyenCV.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
               </div>
           </div>
         </div>
