update portfolio aboutme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,8 +50,12 @@
       <br>
         <div class="content_box col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
             <h2>ABOUT ME</h2>
-            <p>After some years doing various kind of jobs, I realised that my passions are not about doing some specific things, rather that, they are specific feelings when I do different things. I like solving puzzles, playing intellectual games not because of the games itself but because of the excitement after I solved the puzzles. Being creative feels really great, I usually have new ideas to solve everyday life problems and I'd love to be creative over and over again. Additionally, I like talking with other people, especially smart ones because I feel motivated, energetic and really excited when I learn something new or interesting.</p>
-            <p>Being a web developer perfectly fits all of the criteria. I can write code, make things work which is similar to solving puzzles. I can be creative and build some products, nowadays most of the products are connected to the internet so web development would have the most possibility. I can also meet other smart developers in events or I can partner up with some entrepreneurs to build a real world solution, either way I would learn so much from that. Indeed, I think I have found my <strong>passion</strong>.</p>
+            <p>My name is Vu Nguyen, originally from Vietnam. I came to Kuopio, Finland as a student in 2005, moved to Helsinki 2 years later, completed my studies in Metropolia in 2011 and have been living in Helsinki area since then. Right now we (my wife, our 2.5 year old son and I) are living in Malminkartano, Helsinki and we have no plan of moving abroad any time soon until our kid is grown up. We all have gained Finnish citizenship and pretty much settled down here.
+            </p>
+            <p>
+              About me, I like solving quizzes, puzzles, playing intellectual games . Back in school I am good at math especially three-dimensional geometry but I don’t think I remember much of them ( you know, what happened in school stayed in school ). I also love talking with energetic people, exchanging ideas or technical issues. Being a frontend developer is really cool because I can see what I have created, I can talk about interesting topics like innovative solutions and I can continuously develop myself.
+            </p>
+
             <p class="last"></p>
         </div>
     </div>
