--- a/portfolio/projects/Weather/index.html
+++ b/portfolio/projects/Weather/index.html
@@ -35,11 +35,11 @@
             <section>
                 <div>
 
-                    <h2>Project description</h2>
+                    <h2 id="toggleButton">Project description</h2>
 
                     <hr/>
 
-                    <ul class="list">
+                    <ul id="description" class="list">
                         <li>AJAX
                             <ul>
                                 <li>
