change .io/en to .io/

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="col-xs-3 text-center">
-                        <a href="http://www.vufinland.com/cv"><img src="images/social-icons/cv.png" class="social-image hvr-grow" alt="cv">
+                        <a href="https://trachanh1609.github.io/cv"><img src="images/social-icons/cv.png" class="social-image hvr-grow" alt="cv">
                         </a>
                     </div>
                     <div class="col-xs-3 text-center">
