--- a/cv/index.html
+++ b/cv/index.html
@@ -1204,7 +1204,7 @@
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-location"></i></span><span class="info">Parivaljakontie 2, Helsinki</span></div>
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-phone"></i></span><span class="info" itemprop="telephone">+358 442048050</span></div>
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-mail"></i></span><span class="info"><a class="link-disguise" href="mailto:trachanh@gmail.com" itemprop="email">trachanh@gmail.com</a></span></div>
-            <div class="detail"><span class="icon"><i class="icon fs-lg icon-link"></i></span><span class="info"><a href="https://trachanh1609.github.io/en/portfolio" target="_blank">My portfolio</a></span></div>
+            <div class="detail"><span class="icon"><i class="icon fs-lg icon-link"></i></span><span class="info"><a href="https://trachanh1609.github.io/portfolio" target="_blank">My portfolio</a></span></div>
             <div class="detail"><span class="icon" title="Languages I speak"><i class="icon fs-lg icon-language"></i></span><span class="info">English, Vietnamese, Finnish</span></div>
           </div>
           <hr/>
@@ -1213,8 +1213,8 @@
                 <a class="fs-2x social-link link-github icon-github" href="https://github.com/trachanh1609" target="_blank" data-toggle="tooltip" title="Vu Nguyen on Github"></a>
                 <a class="fs-2x social-link link-linkedin icon-linkedin" href="https://www.linkedin.com/in/anhvun/"
                   target="_blank" data-toggle="tooltip" title="Vu Nguyen on LinkedIn"></a>
-                <a class="fs-2x social-link icon-book" href="https://trachanh1609.github.io/en/portfolio" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen Porfolio"></a>
-                <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/en/cv/VuNguyenCV.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
+                <a class="fs-2x social-link icon-book" href="https://trachanh1609.github.io/portfolio" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen Porfolio"></a>
+                <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/cv/VuNguyenCV.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
               </div>
           </div>
         </div>
