update frontpage link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello from Vinny
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Vu Nguyen</title>
+</head>
+<body>
+  <h2>Hello from Vu Nguyen</h2>
+  <h4><a href="/cv">My CV</a></h4>
+  <h4><a href="/portfolio">My Portfolio</a></h4>
+</body>
+</html>
