--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,4 +10,10 @@
   <h4><a href="/cv">My CV</a></h4>
   <h4><a href="/portfolio">My Portfolio</a></h4>
 </body>
+</html> -->
+
+<html>
+  <head>
+    <META http-equiv="refresh" content="0;URL=/portfolio">
+  </head>
 </html>
