--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,7 +42,8 @@
             <img src="images/vu.jpg" alt="VuNguyen" class="img-circle vu-icon">
             <h2>Hi , I am Vu Nguyen</h2>
             <p>I am a frontend developer living in Helsinki, Finland</p>
-            <p>Currently I am looking for challenges as a frontend developer</p>
+            <p>Currently I am looking for challenges in Web development</p>
+            <p>Feel free to take a look at <span><a href="https://trachanh1609.github.io/cv">my CV</a></span></p>
         </div>
     </div>
 
@@ -89,7 +90,7 @@
         <div class="row">
             <div class="content_box col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                 <h2>CONNECT</h2>
-                <p>Feel free to send me a message, just to say hello or give some feedback, some insight about any topic that we may discuss. I think ideas are worth sharing and reflecting so yeah, please don't hesitate to contact.</p>
+                <p>It would be great if you could send me a message, just to say hello or give some feedback, some insight about any topic that we may discuss. I think ideas are worth sharing and reflecting so yeah, please don't hesitate to contact.</p>
                 <div id="connect-content" class="row">
                     <div class="col-xs-3 text-center">
                         <a href="https://fi.linkedin.com/in/anhvun">
