--- a/portfolio/projects/RepoList/index.html
+++ b/portfolio/projects/RepoList/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <br>
+  <h4 class="text-center">Note: 60 requests per hour to Github API</h4>
+  <p class="text-center">Example search keywords: vuejs, react, adobe, twitter etc </p>
   <div id=app></div>
   <script type=text/javascript src="static/js/manifest.fde7b3fa22da51c55e08.js"></script>
   <script type=text/javascript src="static/js/vendor.20d203538e0ddffdc191.js"></script>
