--- a/cv/index.html
+++ b/cv/index.html
@@ -1199,7 +1199,7 @@
         </ul>
       </nav>
       <section class="col-md-3 card-wrapper profile-card-wrapper affix">
-        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100" alt="Vu Nguyen" src="images/vu.jpg" itemprop="image"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Vu Nguyen</b></h3><h5 class="text-muted" itemprop="jobTitle">Frontend Developer</h5></div></span>
+        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100" alt="Vu Nguyen" src="images/vu.jpg" itemprop="image"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Vu Nguyen</b></h3><h5 class="text-muted" itemprop="jobTitle">web Developer</h5></div></span>
           <hr/>
           <div class="contact-details clearfix">
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-location"></i></span><span class="info">Parivaljakontie 6, Helsinki</span></div>
@@ -1218,6 +1218,7 @@
                 <a class="fs-2x social-link icon-code" href="https://trachanh1609.github.io/cv/VuNguyenCV.pdf" target="_blank" data-toggle="tooltip" title="" data-original-title="Vu Nguyen CV in PDF"></a>
               </div>
           </div>
+
         </div>
       </section>
       <section class="col-md-9 card-wrapper pull-right">
@@ -1233,10 +1234,10 @@
                 <ul class="list-unstyled clear-margin">
                   <li class="card card-nested clearfix">
                     <div class="content">
-                      <p class="clear-margin relative"><i class="icon-circle current-event" rel="tooltip" title="Currently Working" data-placement="left"></i><strong>Junior Software Developer</strong>,&nbsp;<a href="https://devecto.com" target="_blank">Devecto Oy</a></p>
+                      <p class="clear-margin relative"><i class="icon-circle current-event" rel="tooltip" title="Currently Working" data-placement="left"></i><strong>Software Developer</strong>,&nbsp;<a href="https://devecto.com" target="_blank">Devecto Oy</a></p>
                       <p class="text-muted"><small><span class="space-right">Jan, 2018 - Present</span></small></p>
                       <div class="mop-wrapper space-bottom">
-                        <p>Consultant</p>
+                        <p>Unity3D, Raspberry Pi, Arduino, ReactNative mobile app.</p>
                       </div>
                     </div>
                   </li>
@@ -1418,11 +1419,15 @@
                   <ul class="list-unstyled clear-margin">
                     <li class="card card-nested">
                       <p><strong>Hackathons that I have attended</strong></p>
-                      <div class="space-top labels"><span class="label label-keyword">Ultrahack</span><span class="label label-keyword">Junction</span><span class="label label-keyword">AngelHack</span><span class="label label-keyword">IoT Hack in MSFlux</span></div>
+                      <div class="space-top labels"><span class="label label-keyword">Ultrahack</span><span class="label label-keyword">Junction</span><span class="label label-keyword">AngelHack</span><span class="label label-keyword">IoT Hack in MSFlux</span><span class="label label-keyword">Robots against human</span></div>
                     </li>
                     <li class="card card-nested">
-                      <p><strong>Hobbies</strong></p>
-                      <div class="space-top labels"><span class="label label-keyword">Guitar</span><span class="label label-keyword">Football</span></div>
+                      <p><strong>Actively attending events in</strong></p>
+                      <div class="space-top labels"><span class="label label-keyword">HelsinkiJS Group</span><span class="label label-keyword">React Helsinki Group</span></div>
+                    </li>
+                    <li class="card card-nested">
+                      <p><strong>Others</strong></p>
+                      <div class="space-top labels"><span class="label label-keyword">Guitar</span><span class="label label-keyword">Football</span><span class="label label-keyword">Startup world and entrepreneurship</span></div>
                     </li>
                   </ul>
                 </div>
