--- a/cv/index.html
+++ b/cv/index.html
@@ -1227,7 +1227,7 @@
                         <div class="detail"><span class="icon"><i class="icon fs-lg icon-mail"></i></span><span class="info"><a
                                     class="link-disguise" href="mailto:trachanh@gmail.com" itemprop="email">trachanh@gmail.com</a></span></div>
                         <div class="detail"><span class="icon"><i class="icon fs-lg icon-link"></i></span><span class="info"><a
-                                    href="https://trachanh1609.github.io/en/portfolio" target="_blank">My portfolio</a></span></div>
+                                    href="https://trachanh1609.github.io/portfolio" target="_blank">My portfolio</a></span></div>
                         <div class="detail"><span class="icon" title="Languages I speak"><i class="icon fs-lg icon-language"></i></span><span
                                 class="info">English, Vietnamese, Finnish</span></div>
                     </div>
