--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,8 +40,8 @@
         <div class="container text-center">
           <br><br><br>
             <img src="images/vu.jpg" alt="VuNguyen" class="img-circle vu-icon">
-            <h2>Hi , I am Vu Nguyen</h2>
-            <p>I am a frontend developer living in Helsinki, Finland</p>
+            <h2>Hi , my name is Vu Nguyen</h2>
+            <p>I am a web developer living in Helsinki, Finland</p>
             <p>Currently I am looking for challenges in Web development</p>
             <p>Feel free to take a look at <span><a href="https://trachanh1609.github.io/cv">my CV</a></span></p>
         </div>
@@ -51,7 +51,7 @@
       <br>
         <div class="content_box col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
             <h2>ABOUT ME</h2>
-            <p>My name is Vu Nguyen, originally from Vietnam. I came to Kuopio, Finland as a student in 2005, moved to Helsinki 2 years later, completed my studies in Metropolia in 2011 and have been living in Helsinki area since then. Right now we (my wife, our 2.5 year old son and I) are living in Malminkartano, Helsinki and we have no plan of moving abroad any time soon until our kid is grown up. We all have gained Finnish citizenship and pretty much settled down here.
+            <p>Originally from Vietnam, I came to Kuopio, Finland as a student in 2005, moved to Helsinki 2 years later, completed my studies in Metropolia in 2011 and have been living in Helsinki area since then. Right now we (my wife, our son and I) are living in Malminkartano, Helsinki and we have no plan of moving abroad any time soon until our kid is grown up. We all have gained Finnish citizenship and pretty much settled down here.
             </p>
             <p>
               About me, I like solving quizzes, puzzles, playing intellectual games . Back in school I am good at math especially three-dimensional geometry but I don’t think I remember much of them ( you know, what happened in school stayed in school ). I also love talking with energetic people, exchanging ideas or technical issues. Being a frontend developer is really cool because I can see what I have created, I can talk about interesting topics like innovative solutions and I can continuously develop myself.
