update portfolio text

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,10 +51,17 @@
       <br>
         <div class="content_box col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
             <h2>ABOUT ME</h2>
-            <p>Originally from Vietnam, I came to Kuopio, Finland as a student in 2005, moved to Helsinki 2 years later, completed my studies in Metropolia in 2011 and have been living in Helsinki area since then. Right now we (my wife, our son and I) are living in Malminkartano, Helsinki and we have no plan of moving abroad any time soon until our kid is grown up. We all have gained Finnish citizenship and pretty much settled down here.
+            <p>
+                    Originally from Vietnam, I came to Kuopio, Finland as a student in 2005, moved to Helsinki 2 years later, completed my studies in Metropolia University of Applied Sciences in 2011 and have been living in Helsinki area since then. Right now we (my wife, our son and I) are living in Helsinki and we have no plan of moving abroad any time soon until our kid is grown up.            
             </p>
             <p>
-              About me, I like solving quizzes, puzzles, playing intellectual games . Back in school I am good at math especially three-dimensional geometry but I don’t think I remember much of them ( you know, what happened in school stayed in school ). I also love talking with energetic people, exchanging ideas or technical issues. Being a frontend developer is really cool because I can see what I have created, I can talk about interesting topics like innovative solutions and I can continuously develop myself.
+                    In 2010 I joined Toastmaster club to practise public speaking and became an active member for a couple of years. The objective of joining the club was to gain public speaking skills but to me it was to conquer fear, to step out of my confort zone repeatedly until fear disappears. I also met countless of great fellows in the clubs and learnt a lot from them.
+            </p>
+            <p>
+                    In 2011, I stepped up to be a candidate for the presidential election of Vietnamese Students Association in Finland and fortunately I was elected. Being the president for 3 years, I would say I had never failed so much and yet learnt so much from that. One of the biggest lessons was to work with other people, not only ordinary people but some are difficult people. Everyone has their own judgement and ways of doing things, it is not black or white in most cases, making decisions that satisfied everyone was impossible. Later in life, I learnt that there are always reasons why people think and act, since everyone has different background, different environtment that shape their thinking, their mindset, seek first to understand from their view point would solve half of the problems.
+            </p>
+            <p>
+                    For hobbies, I like solving quizzes, puzzles, playing intellectual games like board games or chess, I also love other challenging games like billiards, foosball, football. I have been actively playing in a football team for +4 years. Back in high school I was quite good at math especially three-dimensional geometry. I also love talking with energetic people, exchanging ideas or discussing about the technologies. Being a web developer is really fantastic because I can see what I have created, I can discuss about interesting topics and I can continuously develop myself even after work.
             </p>
 
             <p class="last"></p>
